Navbar mobile behaviour and logo visibility fix.
Whats included:
- updated function to check logo visibility.
- new verification to ensure main logo existence.

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ video {
   width: 89px;
 }
 
-.main-nav--colored .main-nav__logo {
+.main-nav__logo.main-nav__logo--visible {
   opacity: 1;
 }
 
